# dmenu-extended

./: .dockerignore  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  TODO.txt  configuration.txt  dmenu_extended.py  dmenu_extended_build  dmenu_extended_cache_build  dmenu_extended_run  dmenu_extended_v2.py  dmenu_run.py  files.txt  pyproject.toml  requirements.txt  settings.txt  setup.py  setup.sh  systemd-install.sh  test.py  test.sh  travis.yml  user_preferences.txt
.github/workflows/: ci.yml
dmenu_extended/: __init__.py  dmenu_extended.py  main.py
plugins/: __init__.py  dmenuExtended_settings.py
scripts/: dmenu_extended_cache_build  dmenu_extended_run
src/dmenu_extended/: install_systemd_service.py  main.py
systemd/: update-dmenu-extended-db.service  update-dmenu-extended-db.timer  update-dmenu-extended-db.user.service
tests/: Dockerfile  check_version_string.sh  performance_test.sh  system_tests.sh  test_install_systemd_service.py  test_main.py  testing.py
